Fixing the footer

--- a/_patterns/cards/call-to-action-banner.html
+++ b/_patterns/cards/call-to-action-banner.html
@@ -6,7 +6,7 @@
     <h2 class="push-0 pad-t-1-2 pad-b tena">{{include.heading}}</h2>
     <p class="kilo">{{include.text}}</p>
     <div class="text-center pad-b">
-      {% pattern buttons/basic text="See collection!" url="/products/" %}
+      {% pattern buttons/ghost text="See collection!" url="/products/" %}
     </div>
   </div>
 </div>
