--- a/_patterns/cards/sectional-banner.html
+++ b/_patterns/cards/sectional-banner.html
@@ -1,23 +1,23 @@
-<section class="section-banner">
+<section class="sectional-banner">
   <div class="icon-list shadow center-content">
     <ol class="list-group center-contents-horizontal grid align-middle icons">
       <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
         <i class="icon i-96 push-1-2">
-          <img src="/images/about.svg" alt="">
+          <img src="/images/svg/about.svg" alt="">
         </i>
         <h2 class="center-text push-1-4">Pick a garden</h2>
         <p class="milli">View our collection of different gardens and pick one you love.</p>
       </li>
       <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
         <i class="icon i-96 push-1-2">
-          <img src="/images/shop.svg" alt="">
+          <img src="/images/svg/bag1.svg" alt="">
         </i>
         <h2 class="center-text push-1-4">Wrap it up</h2>
         <p class="milli">Wrap up your beautiful garden with one of our amazing sleeves.</p>
       </li>
       <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
         <i class="icon i-96 push-1-2">
-          <img src="/images/cart.svg" alt="">
+          <img src="/images/svg/heart.svg" alt="">
         </i>
         <h2 class="center-text push-1-4">Enjoy!</h2>
         <p class="milli">All that's left to do is enjoy your wonderful garden.</p>
