--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,12 +1,78 @@
 <footer role="contentinfo">
   <section class="gutter-1-2">
-    <div class="grid push">
-      <div class="unit xs-1 s-1 m-1-2 push-1-2 button-left">
-        {% pattern buttons/light text="See collection!" url="/products/" %}
+    <div class="grid pad-t">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 button-left pad-b-1-4">
+        {% pattern buttons/light text="Get 25% off, if you refer a friend!" url="/products/" %}
       </div>
-      <div class="unit xs-1 s-1 m-1-2 button-right">
-        {% pattern buttons/light text="See collection!" url="/products/" %}
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 button-right pad-b-1-4">
+        {% pattern buttons/light text="Tag us on instagram to be on our page!" url="/products/" %}
       </div>
     </div>
-    <div class="grid gutter-1-2">
-      <div class="unit xs-1 s-1 m-1-2 l-1-4">
+    <div class="grid max-width micro pad-top gutter">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
+        <h3 class="kilo bold push-1-4">Visit Us</h3>
+        <ul class="list-group">
+          <li>GreenGardens</li>
+          <li>135 St. Palm Springs, CA</li>
+          <li>32144 USA</li>
+          <li>613-869-8116</li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
+        <h3 class="kilo bold push-1-4">Customer Care</h3>
+        <ul class="list-group block push-0">
+          <li>
+            <a href="#">Contact Us</a>
+          </li>
+          <li>
+            <a href="#">Returns and Policy</a>
+          </li>
+          <li>
+            <a href="/privacypolicy">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="#">FAQs</a>
+          </li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
+        <h3 class="kilo bold push-1-4">Social Media</h3>
+        <ul class="list-group">
+          <li>
+            <a class="icon-link milli" href="#">
+              <i class="icon i-32">
+                <svg>
+                  <use xlink:href="/images/icons.svg#facebook"></use>
+                </svg>
+              </i>
+              <span class="icon-label">Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a class="icon-link milli" href="#">
+              <i class="icon i-32">
+                <svg>
+                  <use xlink:href="/images/icons.svg#instagram"></use>
+                </svg>
+              </i>
+              <span class="icon-label">Instagram</span>
+            </a>
+          </li>
+          <li>
+            <a class="icon-link milli" href="#">
+              <i class="icon i-32">
+                <svg>
+                  <use xlink:href="/images/icons.svg#twitter"></use>
+                </svg>
+              </i>
+              <span class="icon-label">Twitter</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="gutter-1-2">
+    <p class="micro">©GreenGardens. All rights reserved.</p>
+</footer>
