--- a/_patterns/sections/side-navigation.html
+++ b/_patterns/sections/side-navigation.html
@@ -1,10 +1,10 @@
 <header class="max-width pad-t-1-2 pad-b-1-2">
   <div class="grid grid-bottom shadow">
-    <div class="subnav unit xs-1 s-1 m-1 l-1 text-center text-upper micro pad-b-1-2">
+    <div class="subnav unit xs-1 s-1 m-1 l-1 text-center text-upper kilo pad-b-1-2">
       <div class="subnav-content">
-        <a class="gutter" href="#company">Original Gardens</a>
-        <a class="gutter" href="#team">Premium Gardens</a>
-        <a class="gutter" href="#careers">Deluxe Gardens</a>
+        <a href="#">Original Gardens</a>
+        <a href="#">Premium Gardens</a>
+        <a href="#">Deluxe Gardens</a>
       </div>
     </div>
   </div>
