--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -1,4 +1,4 @@
-<header class="main-nav max-width pad-t-1-2 pad-b-1-2">
+<header class="main-nav pad-t-1-2 pad-b-1-2">
   <div class="grid grid-bottom">
     <div class="unit xs-1 s-1 m-1 l-1-4 logo island text-center">
       <a href="/">
@@ -7,9 +7,23 @@
     </div>
     <div class="unit xs-1 s-1 m-1 l-3-4 pad-b-1-4">
       <nav class="pad-b-1-2">
-        <ul class="nav-container text-upper list-group milli island push-0">
-          <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}"><a href="/products">Shop</a></li>
-          <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a href="/checkout">Cart</a></li>
+        <ul class="nav-container text-upper list-group island push-0">
+          <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}">
+            <a class="icon-link giga" href="#">
+              <i class="icon i-32">
+                <svg><use xlink:href="/images/icons.svg#search"></use></svg>
+              </i>
+              <span class="icon-label">Search</span>
+            </a>
+          </li>
+          <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}">
+            <a class="icon-link giga" href="/products">
+              <i class="icon i-32">
+                <svg><use xlink:href="/images/icons.svg#bag1"></use></svg>
+              </i>
+              <span class="icon-label">My Bag</span>
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
