--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -1,18 +1,18 @@
-<div class="grid grid-middle">
+<div class="section-container grid grid-middle">
   <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-    <h4 class="pad-t">Made with love</h4>
+    <h4 class="pad-t peta">Made with love</h4>
     <p>Each garden is hand-planted in Ottawa in greenhouses. Every day we hand-pick the best fresh succulents to ensure that every single garden shipped out is made with exceptional quality.</p>
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 pad-b">
     <img class="img-flex img" src="/images/succulent-1.jpg" alt="picture of multiple succulents">
   </div>
 </div>
-<div class="grid grid-middle">
+<div class="section-container grid grid-middle">
   <div class="unit xs-1 s-1 m-1-2 l-1-2">
     <img class="img-flex img" src="/images/succulent-2.jpg" alt="picture of multiple succulents">
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-2">
-    <h4 class="pad-t">A wonderful gift</h4>
+    <h4 class="pad-t peta">A wonderful gift</h4>
     <p>There's something wonderful about this gift. It's a great experice of opening a cute little box to find a beautiful hand-planted succulents planted neatly inside the box. Giving away a sophistated design with great attention to detail. It makes it a gift to remember forever. It's simply a gift that keeps on giving.</p>
   </div>
 </div>
