--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% pattern cards/call-to-action-banner heading="Explore our gardens!" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="home-banner.jpg" %}
+{% pattern cards/call-to-action-banner heading="Explore our gardens" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="home-banner.jpg" %}
 
 <div class="grid grid-middle image-card-container pad-b-2">
   <div class="unit xs-1 m-1 l-1-3">
@@ -15,6 +15,8 @@ layout: default
     {% pattern cards/image-card heading="Deluxe Gardens" text="These deluxe gardens are the biggest boxed plants we sell. Coming in a 15 by 6 box. Boxed with a mixture of succulents." image="deluxegarden1.jpg" %}
   </div>
 </div>
+
+<hr>
 
 {% pattern sections/sections %}
 
