Fixing more styles

--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -19,6 +19,14 @@
           <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}">
             <a class="icon-link giga" href="/products">
               <i class="icon i-32">
+                <svg><use xlink:href="/images/icons.svg#about"></use></svg>
+              </i>
+              <span class="icon-label">Shop</span>
+            </a>
+          </li>
+          <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}">
+            <a class="icon-link giga" href="/checkout">
+              <i class="icon i-32">
                 <svg><use xlink:href="/images/icons.svg#bag1"></use></svg>
               </i>
               <span class="icon-label">My Bag</span>
