--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@ highlight_nav: shop
 {% pattern sections/side-navigation %}
 <hr></hr>
 
-<h1 class="text-center pad-t-1-2 push-0 pad-b-1-2">Original Gardens</h1>
+<h1 class="text-center pad-t-1-2 push-0 pad-b-1-2 product-title">Original Gardens</h1>
 <p class="text-center milli push-0 pad-b-1-4">These small gardens are the smallest we sell, sitting in a 4 by 5 box. Great pieces to add on desks or end tables, at great prices.</p>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
@@ -19,7 +19,7 @@ highlight_nav: shop
     {% endif %}
   {% endfor %}
 </div>
-<h1 class="text-center pad-t-1-2 push-0 pad-b-1-2">Premium Gardens</h1>
+<h1 class="text-center pad-t-1-2 push-0 pad-b-1-2 product-title">Premium Gardens</h1>
 <p class="text-center milli push-0 pad-b-1-4">Three beautiful succulents boxed perfectly in a 9 by 4 inch box. This piece would be great for any center piece for any occasion.</p>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
@@ -30,7 +30,7 @@ highlight_nav: shop
     {% endif %}
   {% endfor %}
 </div>
-<h1 class="text-center pad-t-1-2 push-0 pad-b-1-2">Deluxe Gardens</h1>
+<h1 class="text-center pad-t-1-2 push-0 pad-b-1-2 product-title">Deluxe Gardens</h1>
 <p class="text-center milli push-0 pad-b-1-4">These deluxe gardens are the biggest boxed plants we sell. Coming in a 15 by 6 box. Boxed with a mixture of succulents.</p>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
