Adding to the newsletter

--- a/_patterns/cards/call-to-action-banner.html
+++ b/_patterns/cards/call-to-action-banner.html
@@ -3,10 +3,10 @@
     <img class="img-flex" src="/images/banners/{{include.image}}" alt="">
   </div>
   <div class="unit xs-2-3 s-1-2 cta-banner-container absolute text-center pin-c">
-    <h2 class="push-0 pad-t-1-2 pad-b tena">{{include.heading}}</h2>
+    <h2 class="push-0 pad-t-1-2 pad-b-1-4 tena">{{include.heading}}</h2>
     <p class="kilo">{{include.text}}</p>
-    <div class="text-center pad-b">
-      {% pattern buttons/ghost text="See collection!" url="/products/" %}
+    <div class="text-center pad-b-2">
+      {% pattern buttons/basic text="SHOP NOW" url="/products/" %}
     </div>
   </div>
 </div>
