--- a/_patterns/cards/top-page-banner.html
+++ b/_patterns/cards/top-page-banner.html
@@ -3,10 +3,10 @@
     <img class="img-flex" src="/images/banners/{{include.image}}" alt="">
   </div>
   <div class="unit xs-2-3 s-1-2 absolute top-banner-container text-center pin-c">
-    <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b tena">{{include.heading}}</h2>
-    <p class="gutter-1-2 mega">{{include.text}}</p>
-    <div class="text-center pad-b">
-      {% pattern buttons/ghost text="Learn More" url="/products/" %}
+    <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b-1-4 tena">{{include.heading}}</h2>
+    <p class="gutter-1-2 kilo">{{include.text}}</p>
+    <div class="text-center pad-b-2">
+      {% pattern buttons/ghost text="LEARN MORE" url="/products/" %}
     </div>
   </div>
 </div>
