--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% pattern cards/call-to-action-banner heading="Explore our gardens" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="home-banner.jpg" %}
+{% pattern cards/home-banner heading="Explore our gardens!" text="We garantee that you will find one you love." image="home-banner1.jpg" %}
 
 <div class="grid grid-middle image-card-container pad-b-2">
   <div class="unit xs-1 m-1 l-1-3">
