--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@ layout: default
 highlight_nav: shop
 ---
 
-{% pattern cards/top-page-banner heading="Learn more about us" text="Want to know what greengardens is all about? Discover more about us and our amazing plants!" image="top-banner.jpg" %}
+{% pattern cards/top-page-banner heading="Learn more about us" text="Discover more about us and our amazing plants!" image="top-banner.jpg" %}
 
 {% pattern sections/side-navigation %}
 <hr></hr>
