Finished the newsletter

--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -29,7 +29,7 @@
               <i class="icon i-32">
                 <svg><use xlink:href="/images/icons.svg#bag1"></use></svg>
               </i>
-              <span class="icon-label">My Bag</span>
+              <span class="icon-label">Bag</span>
             </a>
           </li>
         </ul>
