--- a/_patterns/newsletter/pricing-table.html
+++ b/_patterns/newsletter/pricing-table.html
@@ -1,5 +1,179 @@
-<div class=" price-card gutter-1-2">
-  <img class="img-flex price-image pad-t-1-2" src="/images/products/{{include.image}}" alt="small garden">
-  <h1 class="text-upper mega push-0 pad-b-1-4 pad-t-1-2">{{include.heading}}</h1>
-  <p class="kilo push-0 pad-b-1-4 milli">{{include.text}}</p>
+<div class="grid">
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 pricings gutter-1-2">
+    <table class="price-shadow price-table">
+      <caption class="tera push-1-2 text-center">$20</caption>
+      <thead>
+        <tr>
+          <th class=" peta text-center table-heading" scope="col" colspan="2">Original Gardens</th>
+        </tr>
+      </thead>
+      <tbody class="bodytable gutter-2">
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="icon-label">Indoor</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">Outdoor</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">Domestic shipping</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">International shipping</td>
+        </tr>
+      </tbody>
+      <tfoot class="tablefoot">
+        <tr>
+          <td class="text-center pad-b" colspan="2">
+            {% pattern buttons/ghost text="See collection" url="/products/" %}
+          </td>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 pricings gutter-1-2">
+    <table class="price-shadow price-table">
+      <caption class="tera push-1-2 text-center darkblue">$50</caption>
+      <thead>
+        <tr>
+          <th class=" peta text-center table-heading" scope="col" colspan="2">Premium Gardens</th>
+        </tr>
+      </thead>
+      <tbody class="bodytable gutter-2">
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="icon-label">Indoor</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">Outdoor</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">Domestic shipping</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">International shipping</td>
+        </tr>
+      </tbody>
+      <tfoot class="tablefoot">
+        <tr>
+          <td class="text-center pad-b" colspan="2">
+            {% pattern buttons/ghost text="See collection" url="/products/" %}
+          </td>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 pricings gutter-1-2">
+    <table class="price-shadow price-table">
+      <caption class="tera push-1-2 text-center darkblue">$100</caption>
+      <thead>
+        <tr>
+          <th class=" peta text-center table-heading" scope="col" colspan="2">Deluxe Gardens</th>
+        </tr>
+      </thead>
+      <tbody class="bodytable gutter-2">
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="icon-label">Indoor</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">Outdoor</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart2"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">Domestic shipping</td>
+        </tr>
+        <tr>
+          <td class="text-center pad-t pad-b-1-2">
+            <i class="icon i-1">
+              <svg>
+                <use xlink:href="/images/icons.svg#heart"></use>
+              </svg>
+            </i>
+          </td>
+          <td class="pad-t pad-b-1-2">International shipping</td>
+        </tr>
+      </tbody>
+      <tfoot class="tablefoot">
+        <tr>
+          <td class="text-center pad-b" colspan="2">
+            {% pattern buttons/ghost text="See collection" url="/products/" %}
+          </td>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 </div>
