--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -21,7 +21,7 @@
         </a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-3-4 pad-b-1-4">
-        <nav class="pad-b-1-2 tabindex="0" id="nav" role="navigation">
+        <nav class="pad-b-1-2 tabindex="0" id="nav" role="navigation"">
           <ul class="nav-container text-upper list-group island push-0">
             <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}">
               <a class="icon-link giga" href="#">
