--- a/_patterns/cards/call-to-action-banner.html
+++ b/_patterns/cards/call-to-action-banner.html
@@ -1,6 +1,6 @@
-<div class="cta-banner grid relative">
+<div class="cta-banner grid relative role="banner"">
   <div class="crop unit xs-1 push">
-    <img class="img-flex" src="/images/banners/{{include.image}}" alt="">
+    <img class="img-flex" src="/images/banners/{{include.image}}" alt="" aria-details="plants">
   </div>
   <div class="unit xs-2-3 s-1-2 cta-banner-container absolute text-center pin-c">
     <h2 class="push-0 pad-t-1-2 pad-b-1-4 tena">{{include.heading}}</h2>
