--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,4 +1,4 @@
-<div class=" image-card gutter-1-2">
+<div class="image-card gutter-1-2 tabindex="0" id="main" role="main"">
   <a href="/products">
     <img class="img-flex image pad-t-1-2" src="/images/products/{{include.image}}" alt="small garden">
     <h1 class="text-upper mega push-0 pad-b-1-4 pad-t-1-2">{{include.heading}}</h1>
