--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,4 +1,4 @@
-<section>
+<section id="plants">
   <div class="text-center product-container">
     <a class="hover-box block relative crop" href="{{include.data.url}}">
       <div class="embed embed-3by2">
