--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,11 +1,11 @@
-<footer role="contentinfo">
+<footer tabindex="0" id="footer" role="contentinfo">
   <section class="gutter-1-2">
     <div class="grid pad-t">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 button-left pad-b-1-4">
         {% pattern buttons/light text="Tag us on instagram to be on our page!" url="/products/" %}
       </div>
       <div class="unit xs-1 s-1 m-1-2 l-1-2 button-right pad-b-1-4">
-        {% pattern buttons/light text="Sign up to our newsletter for discounts!" url="/products/" %}
+        {% pattern buttons/light text="Sign up to our newsletter for discounts!" url="/newsletter" %}
       </div>
     </div>
     <div class="grid max-width micro pad-top gutter">
