--- a/_patterns/forms/confirmation.html
+++ b/_patterns/forms/confirmation.html
@@ -2,6 +2,6 @@
   <input type="checkbox" id="agree" required>
   <label for="agree">{{include.text}}</label>
   <div class="text pad-t-2 text-center">
-    {% pattern buttons/basic text="See collection" url="/" %}
+    {% pattern buttons/basic text="Purchase" url="/" %}
   </div>
 </div>
