--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -4,13 +4,13 @@
       <a href="#nav">Jump to nav</a>
     </li>
     <li>
+      <a href="#banner">Jump to banner</a>
+    </li>
+    <li>
       <a href="#main">Jump to main</a>
     </li>
     <li>
-      <a href="#content">Jump to content</a>
-    </li>
-    <li>
-      <a href="#about">Jump to about</a>
+      <a href="#footer">Jump to footer</a>
     </li>
   </ul>
   <header class="main-nav pad-t-1-2 pad-b-1-2">
