--- a/newsletter.html
+++ b/newsletter.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% pattern newsletter/promotion-alert title="Buy a premium garden and get one 50% off!" %}
-{% pattern cards/call-to-action-banner heading="Explore" text="Start exploring our gardens to find a plant that best suits you." image="call-to-action-banner1.jpg" %}
+{% pattern cards/call-to-action-banner heading="Explore" text="Start exploring our gardens to find a plant that best suits you." image="call-to-action-banner.jpg" %}
 
 <div class="grid">
   <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 pad-b-2">
