--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,18 +2,18 @@
 layout: default
 ---
 
-<div>
+<div class="privacy">
   <h1 class="text-center pad-t pad-b">Privacy and cookie policy & Terms of use</h1>
   <div class="gutter-2">
     <h2 class="push-0">Privacy Policy</h2>
       <p class="micro push-0 pad-b-1-4">Effective date: January 01, 2019</p>
-      <p class="micro push-0 pad-b-1-4">Super eCommerce (“us”, “we”, or “our”) operates the https://super-ecommerce.ca website (hereinafter referred to as the “Service”).</p>
+      <p class="micro push-0 pad-b-1-4">Super eCommerce (“us”, “we”, or “our”) operates the <a href="https://super-ecommerce.ca">https://super-ecommerce.ca</a> website (hereinafter referred to as the “Service”).</p>
       <p class="micro push-0 pad-b-1-4">This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. The Privacy Policy for Super eCommerce has been created with the help of TermsFeed Privacy Policy Generator.</p>
-      <p class="micro">We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://super-ecommerce.ca</p>
+      <p class="micro">We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from <a href="https://super-ecommerce.ca">https://super-ecommerce.ca</a></p>
       <h3 class="push-0 pad-t-1-2">Definitions</h3>
         <ul>
           <li class="push-0">Service</li>
-          <p class="micro push-0">Service is the https://super-ecommerce.ca website operated by Super eCommerce</p>
+          <p class="micro push-0">Service is the <a href="https://super-ecommerce.ca">https://super-ecommerce.ca</a> website operated by Super eCommerce</p>
           <li class="push-0">Personal Data</li>
           <p class="micro push-0">Personal Data means data about a living individual who can be identified from those data (or from those and other information either in our possession or likely to come into our possession).</p>
           <li class="push-0">Usage Data</li>
@@ -36,7 +36,7 @@ layout: default
           <h5 class="push-0">Usage Data</h5>
             <p class="micro">We may also collect information how the Service is accessed and used (“Usage Data”). This Usage Data may include information such as your computer’s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
           <h5 class="push-0">Tracking & Cookies Data</h5>
-            <p class="micro push-0">eCommerce Website (“us”, “we”, or “our”) uses cookies on the https://super-ecommerce.ca website (the ”Service”). By using the Service, you consent to the use of cookies.</p>
+            <p class="micro push-0">eCommerce Website (“us”, “we”, or “our”) uses cookies on the <a href="https://super-ecommerce.ca">https://super-ecommerce.ca</a> website (the ”Service”). By using the Service, you consent to the use of cookies.</p>
             <p class="micro">Our Cookies Policy explains what cookies are, how we use cookies, how third-parties we may partner with may use cookies on the Service, your choices regarding cookies and further information about cookies. This Cookies Policy for eCommerce Website has been created with the help of TermsFeed Cookie Policy Generator.</p>
             <h6 class="push-0">What are cookies</h6>
               <p class="micro push-0">Cookies are small pieces of text sent by your web browser by a website you visit. A cookie file is stored in your web browser and allows the Service or a third-party to recognize you and make your next visit easier and the Service more useful to you.</p>
@@ -53,17 +53,17 @@ layout: default
               <p class="micro push-0">If you’d like to delete cookies or instruct your web browser to delete or refuse cookies, please visit the help pages of your web browser. As an European citizen, under GDPR, you have certain individual rights. You can learn more about these rights in the GDPR Guide.</p>
               <p class="micro push-0">Please note, however, that if you delete cookies or refuse to accept them, you might not be able to use all of the features we offer, you may not be able to store your preferences, and some of our pages might not display properly.</p>
               <ul>
-                <li class="micro">For the Chrome web browser, please visit this page from Google: https://support.google.com/accounts/answer/32050</li>
-                <li class="micro">For the Internet Explorer web browser, please visit this page from Microsoft: http://support.microsoft.com/kb/278835</li>
-                <li class="micro">For the Firefox web browser, please visit this page from Mozilla: https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</li>
-                <li class="micro">For the Safari web browser, please visit this page from Apple: https://support.apple.com/kb/PH21411?locale=en_US</li>
+                <li class="micro">For the Chrome web browser, please visit this page from Google: <a href="https://support.google.com/accounts/answer/32050">https://support.google.com/accounts/answer/32050</a></li>
+                <li class="micro">For the Internet Explorer web browser, please visit this page from Microsoft: <a href="http://support.microsoft.com/kb/278835">http://support.microsoft.com/kb/278835</a></li>
+                <li class="micro">For the Firefox web browser, please visit this page from Mozilla: <a href="https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored">https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</a></li>
+                <li class="micro">For the Safari web browser, please visit this page from Apple: <a href="https://support.apple.com/kb/PH21411?locale=en_US">https://support.apple.com/kb/PH21411?locale=en_US</a></li>
                 <li class="micro">For any other web browser, please visit your web browser’s official web pages.</li>
               </ul>
             <h6 class="push-0">Where can you find more information about cookies</h6>
               <p class="micro push-0">You can learn more about cookies and the following third-party websites:</p>
               <ul>
-                <li class="micro">AllAboutCookies: http://www.allaboutcookies.org/</li>
-                <li class="micro">Network Advertising Initiative: http://www.networkadvertising.org/</li>
+                <li class="micro">AllAboutCookies: <a href="http://www.allaboutcookies.org/">http://www.allaboutcookies.org/</a></li>
+                <li class="micro">Network Advertising Initiative: <a href="http://www.networkadvertising.org/">http://www.networkadvertising.org/</a></li>
               </ul>
       <h3 class="push-0">Use of Data</h3>
         <p class="micro push-0">Super eCommerce uses the collected data for various purposes:</p>
@@ -99,34 +99,66 @@ layout: default
         <p class="micro push-0 pad-b">These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
       <h3 class="push-0">Analytics</h3>
         <p class="micro push-0 pad-b-1-4">We may use third-party Service Providers to monitor and analyze the use of our Service.</p>
-        <p class="push-0">Services</p>
-        <p class="micro push-0">Facebook Like button and social widgets</p>
-        <p class="micro push-0">Twitter Tweet button and social widget</p>
-        <p class="micro push-0">Pinterest “Pin it” button and social widgets</p>
-        <p class="micro push-0">Google Analytics</p>
-        <p class="micro push-0">MailChimp email address management service</p>
-        <p class="micro push-0">PayPal Standard Checkout</p>
-        <p class="push-0">Analytics</p>
-        <p class="micro push-0">cookies and usage data</p>
-        <p class="micro push-0">cookies and usage data</p>
-        <p class="micro push-0">cookies and usage data</p>
-        <p class="micro push-0">cookies and usage data</p>
-        <p class="micro push-0">email address</p>
-        <p class="micro push-0">email address, name, credit card</p>
-        <p class="push-0">Platform</p>
-        <p class="micro push-0">Facebook Inc., USA</p>
-        <p class="micro push-0">Twitter Inc., USA</p>
-        <p class="micro push-0">Pinterest Inc., USA</p>
-        <p class="micro push-0">Google Inc., USA</p>
-        <p class="micro push-0">The Rocket Science Group Inc., USA</p>
-        <p class="micro push-0">PayPal Inc., USA</p>
-        <p class="push-0">Privacy Policy</p>
-        <p class="micro push-0">http://www.facebook.com/privacy/explanation.php</p>
-        <p class="micro push-0">http://twitter.com/privacy</p>
-        <p class="micro push-0">http://about.pinterest.com/privacy/</p>
-        <p class="micro push-0">http://www.google.com/intl/en/policies/privacy/</p>
-        <p class="micro push-0">http://mailchimp.com/legal/privacy/</p>
-        <p class="micro push-0 pad-b">https://www.paypal.com/ca/cgi-bin/webscr?cmd=p/gen/ua/policy_privacy-outside</p>
+        <div class="table-pp">
+          <table>
+            <tbody class="header-table">
+              <tr>
+                <th scope="col">Service</th>
+                <th scope="col">Analytics</th>
+                <th scope="col">Platform</th>
+                <th scope="col">Privacy Policy</th>
+              </tr>
+              <tr>
+                <th scope="row">Facebook Like button and social widgets</th>
+                <td>Cookies and usage data</td>
+                <td>Facebook Inc., USA</td>
+                <td>
+                  <a href="http://www.facebook.com/privacy/explanation.php">Privacy Policy</a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Twitter Tweet button and social widgets</th>
+                <td>Cookies and usage data</td>
+                <td>Twitter Inc., USA</td>
+                <td>
+                  <a href="http://twitter.com/privacy">Privacy Policy</a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Pinterest “Pin it” button and social widgets</th>
+                <td>Cookies and usage data</td>
+                <td>Pinterest Inc., USA</td>
+                <td>
+                  <a href="http://about.pinterest.com/privacy/">Privacy Policy</a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Google Analytics</th>
+                <td>Cookies and usage data</td>
+                <td>Google Inc., USA</td>
+                <td>
+                  <a href="http://www.google.com/intl/en/policies/privacy/">Privacy Policy</a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">MailChimp email address management service</th>
+                <td>email address</td>
+                <td>The Rocket Science Group Inc., USA</td>
+                <td>
+                  <a href="http://mailchimp.com/legal/privacy/">Privacy Policy</a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">PayPal Standard Checkout</th>
+                <td>email address, name, credit card</td>
+                <td>PayPal Inc., USA</td>
+                <td>
+                  <a href="https://www.paypal.com/ca/cgi-bin/webscr?cmd=p/gen/ua/policy_privacy-outside">Privacy Policy</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       <h3 class="push-0">Links to Other Sites</h3>
         <p class="micro push-0">Our Service may contain links to other sites that are not operated by us. If you click a third party link, you will be directed to that third party’s site. We strongly advise you to review the Privacy Policy of every site you visit.</p>
         <p class="micro push-0 pad-b">We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
@@ -144,7 +176,7 @@ layout: default
         </ul>
     <h2 class="push-0">Terms and Conditions (“Terms”)</h2>
       <p class="micro push-0">Last updated: January 01, 2019</p>
-      <p class="micro push-0">Please read these Terms and Conditions (“Terms”, “Terms and Conditions”) carefully before using the https://super-ecommerce.ca website (the “Service”) operated by Super eCommerce (“us”, “we”, or “our”).</p>
+      <p class="micro push-0">Please read these Terms and Conditions (“Terms”, “Terms and Conditions”) carefully before using the <a href="https://super-ecommerce.ca">https://super-ecommerce.ca</a> website (the “Service”) operated by Super eCommerce (“us”, “we”, or “our”).</p>
       <p class="micro push-0">Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
       <p class="micro push-0 pad-b">By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service. The Terms and Conditions agreement for Super eCommerce has been created with the help of TermsFeed Terms and Conditions Generator.</p>
     <h2 class="push-0">Accounts</h2>
@@ -172,3 +204,6 @@ layout: default
       <ul>
         <li class="micro">By email: help@super-ecommerce.ca</li>
       </ul>
+    </div>
+  </div>
+</div>
